--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ MarkupSafe==3.0.2
 psycopg2==2.9.10
 SQLAlchemy==2.0.40
 typing_extensions==4.13.2
+pandas~=2.1.4
+great-expectations~=1.4.4
+psycopg2-binary
